--- a/css/xistin.css
+++ b/css/xistin.css
@@ -2193,27 +2193,10 @@
     .slider-hero{
       position:relative;
       height:100vh; 
-      min-height:700px; 
+      min-height:700px;  
+      /* z-index: -1; */
     } 
-    /* .hero-slider{
-      position: relative;
-    }
-    .hero-slider::before{
-      position: absolute;
-      content: "";
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0,0,0,.5);
-      z-index: 1;
-    }
-    .slider-hero .hero-slider .row{
-      position: relative;
-      z-index: 999999999;
-      border: 1px solid white;
-    } */
-
+  
     .slider-hero .hero-slider h2{
       font-family: 'Lustria', serif;  
     } 
@@ -2224,8 +2207,8 @@
       font-weight: 200;
     }
     .slider-hero .hero-slider .item .work a.px-5{
-      font-size: .85rem;  
-    }
+      font-size: .85rem;   
+    } 
 
     
     .slider-hero .work{width:100%}
